<resources>
    <string name="app_name">Assignment Calculator</string>
    <string name="default_number">0</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="back">BACK</string>
    <string name="divider">÷</string>
    <string name="multiplier">×</string>
    <string name="subtractor">-</string>
    <string name="comma">,</string>
    <string name="equal">=</string>
    <string name="plusminus">+/-</string>
    <string name="add">+</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>