<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D3D3D3"
        android:gravity="end|bottom"
        android:inputType="numberDecimal"
        android:text="@string/default_number"
        android:textSize="50sp"
        android:autofillHints="false"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCE"
            android:onClick="btnCE"
            android:text="@string/ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#3DB2FF"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt" />

        <Button
            android:id="@+id/btnC"
            android:onClick="btnC"
            android:text="@string/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#3DB2FF"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnBack"
            android:onClick="btnBack"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#3DB2FF"
            android:textSize="15sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnDivider"
            android:onClick="btnDivider"
            android:text="@string/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#001E6C"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:onClick="btnSeven"
            android:text="@string/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt" />

        <Button
            android:id="@+id/btnEight"
            android:onClick="btnEight"
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnNine"
            android:onClick="btnNine"
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnMultiplier"
            android:onClick="btnMultiplier"
            android:text="@string/multiplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#001E6C"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:onClick="btnFour"
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt" />

        <Button
            android:id="@+id/btnFive"
            android:onClick="btnFive"
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnSix"
            android:onClick="btnSix"
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnSubtractor"
            android:onClick="btnSubtractor"
            android:text="@string/subtractor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#001E6C"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:onClick="btnOne"
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt" />

        <Button
            android:id="@+id/btnTwo"
            android:onClick="btnTwo"
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnThree"
            android:onClick="btnThree"
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnAdd"
            android:onClick="btnAdd"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#001E6C"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlusMinus"
            android:onClick="btnPlusMinus"
            android:text="@string/plusminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#716F81"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt" />

        <Button
            android:id="@+id/btnZero"
            android:onClick="btnZero"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#93B5C6"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnComma"
            android:onClick="btnComma"
            android:text="@string/comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#716F81"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>

        <Button
            android:id="@+id/btnEqual"
            android:onClick="btnEqual"
            android:text="@string/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#001E6C"
            android:textSize="30sp"
            android:height="40pt"
            android:width="30pt"/>
    </LinearLayout>

</LinearLayout>